--- a/landing-page-christmas/assets/css/style.css
+++ b/landing-page-christmas/assets/css/style.css
@@ -1,36 +1,24 @@
 /* ========= CSS RESET =============*/
+
 html 
 {
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
-*, *::after, *::before 
+*,*::after, *::before
 {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
 }
-ul
-{
-    list-style: none;
-}
-a 
-{
-    text-decoration: none;
-    color: inherit;
-}
-img 
-{
-    max-width: 100%;
-    height: auto;
-}
-
-/*============ CSS VARIABLES ============== */
+a{text-decoration: none; color: inherit;}
+li{list-style: none;}
+img{max-width: 100%; height: auto;}
+/* =============== CSS VARIABLES ================ */
 :root 
 {
-    /* --------- header height ----------*/
     --header-height: 3rem;
-    /* ------------ color variables --------*/
+    /* ---------- color ---------*/
     --first-color: #DA2535;
     --first-color-alt: #C42130; 
     --first-color-send: #DE3B49;
@@ -39,64 +27,69 @@ img
     --text-color-light: #8F8A8A;
     --body-color: #FEFBFB;
     --container-color: #FFF;
-    /* ---------- font and typography ------*/
+    /* ---------- font and typography ---------------*/
     --body-font: 'Poppins', sans-serif;
     --biggest-font-size: 2rem;
     --h2-font-size: 1.25rem;
     --h3-font-size: 1.125rem;
     --normal-font-size: .938rem;
     --small-font-size: .813rem;
-    /*---------- font weight-----------*/
+    /* --------- font weight -----------------*/
     --font-semi-bold: 600;
     --font-bold: 700;
-    /* ------------- margin --------------*/
+    /* --------- margin -----------------*/
     --mb-1: .5rem;
     --mb-2: 1rem;
     --mb-3: 1.5rem;
     --mb-4: 2rem;
     --mb-5: 2.5rem;
     --mb-6: 3rem;
-    /* -------- padding ----------*/
-    --section-padding: 2rem;
+    --mb-nav-link: var(--mb-3);
+    /* ------------ padding --------------*/
+    --section-padding: 4rem 0 2rem;
+    --padding-0: 0.25rem;
     --padding-1: 0.5rem;
-    --padding-1-5: 0.75rem;
     --padding-2: 1rem;
     --padding-3: 1.5rem;
     --padding-4: 2rem;
     --padding-5: 2.5rem;
-    /* ---------------- z index -----------*/
+    --padding-nav-menu: 2.5rem 0 0;
+    /* ---------- line height ----------*/
+    --line-height: 1.6;
+    /* ---------- z index ------------*/
     --z-tooltip: 10;
     --z-fixed: 100;
-    /* ----------- line height -----------*/
-    --line-height: 1.6;
-
+    /* ----------- transition ----------*/
+    --nav-menu-transition: 0.4s;
+    /* ------------ box shadow ----------*/
+    --bs-nav-menu: 0 0 4px rgba(0, 0, 0, .1);
+    /* ----------- border radius ---------------*/
+    --br-nav-menu: 2rem;
 }
 
-/* ================ BODY =================*/
-body 
+/* ============= VARIABLES DARK THEME ================= */
+body.dark-theme
 {
-    margin: var(--header-height) 0 0 0;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    background-color: var(--body-color);
-    color: var(--text-color);
-    line-height: var(--line-height);
+    --first-color-send: #161212;
+    --title-color: #f3f1f1;
+    --text-color: #d1c7c8;
+    --text-color-light: #251d1e;
+    --body-color: #302728;
 }
-
-/* ---------- heading  ------ */
-h1,
-h2,
-h3
+/* ============ BUTTON DARK/LIGHT ===================*/
+.change-theme 
 {
-    font-weight: var(--font-semi-bold);
-    color: var(--title-color)
+    position: absolute;
+    right: 1.5rem;
+    top: 2.2rem;
+    display: flex;
+    font-size: 2rem;
+    cursor: pointer;
 }
-
-
-/* ======== UTILITY CLASS =====*/
+/* --------- UTILITY AND LAYOUT CLASS ------------------*/
 .section 
 {
-    padding: calc(var(--section-padding) * 2) 0 var(--section-padding);
+    padding: var(--section-padding);
 }
 .section-title,
 .section-title-center 
@@ -107,7 +100,7 @@ h3
     margin-block-end: var(--mb-3);
 }
 
-/* ===== UTILITY CLASS - LAYOUT =======*/
+/* ------ layout ----------- */
 .l-main 
 {
     overflow: hidden;
@@ -117,67 +110,60 @@ h3
     max-width: 968px;
     width: calc(100% - var(--mb-3) * 2);
     margin-inline: var(--mb-3);
+    margin-inline: auto;
+    
 }
 .bd-grid 
 {
     display: grid;
     gap: 1.5rem;
 }
-
-/*=============== HEADER ================ */
 .l-header 
 {
-    
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
-  
 }
+/* ------- body --------------- */
+body 
+{
+    margin: var(--header-height) 0 0 0;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    background-color: var(--body-color);
+    color: var(--text-color);
+    line-height: var(--line-height);
+}
+h1,
+h2,
+h3
+{
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+}
+
 /* ========== NAV ============== */
+
+
 .nav 
 {
-    height: var(--header-height);
+    block-size: var(--header-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.nav__item 
-{
-    margin-block-end: var(--mb-3);
-}
-.nav__link,
-.nav__logo,
-.nav__toggle 
-{
-    color: var(--title-color);
-    font-weight: var(--font-semi-bold);
-}
-
-.nav__logo:hover 
-{
-    color: var(--first-color);
-}
-.nav__link 
-{
-    transition: .3s;
-}
+.nav__logo:hover,
 .nav__link:hover 
 {
     color: var(--first-color);
 }
-.nav__toggle 
-{
-    font-size: var(--h2-font-size);
-    cursor: pointer;
-}
 
-/* ========= HOME ===============*/
+/* =========== HOME =======================*/
 .home__container 
 {
-   
     row-gap: .5rem;
 }
 .home__img 
@@ -185,146 +171,140 @@ h3
     width: 280px;
     justify-self: center;
 }
-
 .home__title 
 {
     font-size: var(--biggest-font-size);
     font-weight: var(--font-bold);
     margin-block-end: var(--mb-2);
 }
-.home__description 
+.home__description
 {
     margin-block-end: var(--mb-3);
-   
 }
-
-/* ==== BUTTON ===========*/
-.button 
+/* =========== BUTTONS ================*/
+.button
 {
     display: inline-block;
     background-color: var(--first-color);
     color: #fff;
     padding: var(--padding-2) var(--padding-3);
-    border-radius: .5em;
+    border-radius: .5rem;
     font-weight: var(--font-semi-bold);
     transition: .3s;
 }
-.button:hover 
+.button:hover
 {
     background-color: var(--first-color-alt);
 }
-.button-link
+.button-link 
 {
     background: none;
     padding: 0;
-    color: var(--first-color)
+    color: var(--first-color);
 }
-.button-link:hover 
+.button-link:hover
 {
     background-color: transparent;
     color: var(--first-color-alt);
 }
 
-/* =========== SHARE ============== */
+
+/* ================== SHARE ==============================*/
 .share__data 
 {
-    text-align:center;
+    text-align: center;
 }
-
 .share__description 
 {
-    margin-block-end: var(--mb-3);
+    margin-block-end: var(--mb-2);
 }
 .share__img 
 {
-    width: 280px;
+    inline-size: 280px;
     justify-self: center;
 }
-/*================= INITIAL MEDIA QUERIES =========== */
-@media screen and (min-width: 968px)
-{
-    :root 
-    {
-        --biggest-font-size: 3rem;
-        --h2-font-size: 1.75rem;
-        --h3-font-size: 1.25rem;
-        --normal-font-size: 1rem;
-        --small-font-size: .875rem;
-    }
-}
-@media screen and (max-width: 768px)
-{
-    .nav__menu
-    {
-        position: fixed;
-        top: -100%;
-        left:0;
-        right:0;
-        width: 90%;
-        margin: 0 auto;
-        padding: var(--padding-5) 0 0;
-        background-color: var(--body-color);
-        transition: .4s;
-        box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
-        border-radius: 2rem;
-        z-index: var(--z-fixed);
-        text-align: center;
-    }
-}
+/* ============== DECORATION ======================*/
 
-/* =============== DECORATION ========== */
 .decoration__container 
 {
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 }
-
-/* ======= ACCESSORIES ==============*/
-.accessory__container 
+.decoration__data 
 {
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    padding-block-end: var(--padding-4);
-}
-.accessory__content 
-{
-    position: relative;
-    display: grid;
-    padding: 0.25rem 0.75rem 0.75rem;
+    text-align: center;
+    padding: var(--padding-2) var(--padding-2) var(--padding-4);
     background-color: var(--container-color);
     box-shadow: 0 2px 6px rgba(65, 11, 16, .15);
     border-radius: 1rem;
 }
-.accessory__content:hover 
+.decoration__data:hover 
 {
     box-shadow: 0 3px 12px rgba(65, 11, 16, .15);
 }
-.accesory__img 
+.decoration__img 
 {
-    width: 120px;
+    width: 180px;   
+}
+.decoration__title 
+{
+    font-size: var(--h3-font-size);
+    margin-block-end: var(--mb-1);
+}
+/* ================ ACCESSORY =====================*/
+
+.accessory__container 
+{
+    grid-template-columns: repeat(2, 1fr);
+    padding-block-end: var(--padding-2);
+}
+.accessory__content
+{
+    position: relative;
+    display: grid;
+    padding: .25rem .75rem .75rem;
+    background-color: var(--container-color);
+    box-shadow: 0 2px 6px rgba(65, 11, 16, .15);
+    border-radius: 1rem;
+}
+.accessory__content:hover
+{
+    box-shadow: 0 3px 12px rgba(65, 11, 16, .15);
+}
+.accessory__img 
+{
+    width: 110px;
     justify-self: center;
-    margin-block-end: var(--padding-0);
+    margin-block-end: .25rem;
+
 }
 .accessory__title,
-.accessory__category 
-{
-    text-align: center;
-}
 .accessory__category
 {
-    font-size: var(--small-font-size);
-    margin-block-end: var(--mb-1);
-    color: var(--text-color-light);
-}
-.accessory__price
-{
-    font-weight: var(--font-semi-bold);
-    color: var(--title-color);
+    text-align: center;
 }
 .accessory__title 
 {
     font-size: var(--normal-font-size);
 }
 
-.accessory__button
+.accessory__category
+{
+    font-size: var(--small-font-size);
+    margin-block-end: var(--mb-1);
+    color: var(--text-color-light);
+}
+body.dark-theme .accessory__title,
+body.dark-theme .accessory__price,
+body.dark-theme .decoration__title 
+{
+    color: #333;
+}
+.accessory__price
+{
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+}
+.accessory__button 
 {
     position: absolute;
     bottom: 0;
@@ -332,9 +312,10 @@ h3
     display: flex;
     font-size: 1.25rem;
     padding: .5rem .625rem;
-    border-radius: 1rem 0 1rem 0;
+    border-start-start-radius: 1rem;
+    border-end-end-radius: 1rem;
 }
-/*================ SEND GIFT ==============*/
+/* =============== SEND =======================*/
 .send
 {
     background-color: var(--first-color-send);
@@ -349,11 +330,11 @@ h3
     text-align: center;
     margin-block-end: var(--mb-4);
 }
-.send__direction 
+.send__direction
 {
     display: flex;
     background-color: #fff;
-    padding: var(--padding-1);
+    padding: .5rem;
     border-radius: .5rem;
 }
 .send__input 
@@ -373,7 +354,7 @@ h3
     width: 280px;
     justify-self: center;
 }
-/*========== FOOTER ================= */
+/* =================== FOOTER =====================*/
 .footer__container 
 {
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -381,10 +362,6 @@ h3
 .footer__logo 
 {
     color: var(--title-color);
-}
-.footer__title 
-{
-    margin-block-end: var(--mb-2);
 }
 .footer__logo,
 .footer__title 
@@ -397,7 +374,7 @@ h3
     margin-block-end: .75rem;
     color: var(--text-color);
 }
-.footer__link:hover 
+.footer__link:hover
 {
     color: var(--first-color);
 }
@@ -407,41 +384,214 @@ h3
     color: var(--title-color);
     margin-inline-end: var(--mb-3);
 }
-.footer__social:hover 
+.footer__social:hover
 {
-    color: var(--first-color)
+    color: var(--first-color);
 }
 .footer__copy 
 {
     text-align: center;
     font-size: var(--small-font-size);
-    color: var(--small-font-size);
-    color: var(--text-color-light);
-    margin-block-start: calc(var(--mb-4) * 2);
+    margin-block-start: 4rem;
 }
-/* ========= JAVASCRIPT FUNCTION  CLASS ==========*/
 
-.decoration__data 
+/* ================ MEDIA QUERY ==================*/
+@media screen and (max-width: 768px)
 {
-    text-align: center;
-    padding: var(--padding-2) var(--padding-2) var(--padding-4);
-    box-shadow: 0 2px 6px rgba(65, 11, 16, .15);
-    border-radius: 1rem;
+    .nav__menu 
+    {
+        position: fixed;
+        top: -100%;
+        left: 0;
+        right: 0;
+        width: 90%;
+        margin-inline: auto;
+        padding: var(--padding-nav-menu);
+        transition: var(--nav-menu-transition);
+        box-shadow: var(--bs-nav-menu);
+        border-radius: var(--br-nav-menu);
+        z-index: var(--z-fixed);
+        background-color: var(--body-color);
+        text-align: center;
+    }
+    .nav__item 
+    {
+        margin-block-end: var(--mb-nav-link);
+    }
+    .nav__link,
+    .nav__logo,
+    .nav__toggle
+    {
+        color: var(--title-color);
+        font-weight: var(--font-semi-bold);
+    }
+    .nav__logo:hover 
+    {
+        color: var(--first-color);
+    }
+    .nav__link 
+    {
+        transition: 0.3s;
+    }
+    .nav__link:hover 
+    {
+        color: var(--first-color);
+    }
+    .nav__toggle 
+    {
+        font-size: 1.3rem;
+        cursor: pointer;
+    }
 }
-.decoration__data:hover 
+@media screen and (min-width: 968px)
 {
-    box-shadow: 0 3px 12px rgba(65, 11, 16, .15);
+    :root
+    {
+        --biggest-font-size: 3rem;
+        --h2-font-size: 1.75rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-font-size: .875rem;
+    }
+}
 
-}
-.decoration__img 
+/* ------------ responsive media queries -------- */
+
+/* for full-screen images on small screen */
+@media screen and (max-width: 359px)
 {
-    width: 180px;
+    .home__img,
+    .share__img,
+    .send__img
+    {
+        width: 100%;
+    }
 }
-.decoration__title 
+
+
+@media screen and (min-width: 576px)
 {
-    font-size: var(--h3-font-size);
-    margin-block-end: var(--mb-1);
+    .home__container,
+    .share__container,
+    .send__container
+    {
+
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+    .section-title-center,
+    .share__data,
+    .send__description
+    {
+        text-align: initial;
+    }
+    .home__container {
+        padding: 5rem 0 0;
+    }
+    .home__img 
+    {
+        order: 1;
+    }
+    .share__img 
+    {
+        order: -1;
+    }
+    .home__img,
+    .share__img,
+    .send__img 
+    {
+        width: 100%;
+    }
 }
+
+@media screen and (min-width: 768px)
+{
+    .section 
+    {
+        --section-padding: 7rem 0 2rem;
+    }
+    .nav 
+    {
+        height: calc(var(--header-height) + 1.5rem);
+    }
+    .nav__list 
+    {
+        display: flex;
+        align-items: center;
+    }
+    .nav__item 
+    {
+        margin-inline-start: var(--mb-5);
+        margin-block-end: 0;
+    }
+    .nav__toggle 
+    {
+        display: none;
+    }
+    .home__container 
+    {
+        padding: 7rem 2rem 0;
+    }
+    .change-theme
+    {
+        position: initial;
+        margin-inline-start: var(--mb-4);
+    }
+    .share__container 
+    {
+        padding: 0 2rem;
+    }
+    .accessory__container 
+    {
+        grid-template-columns: repeat(3, 224px);
+        justify-content: center;
+    }
+    .accessory__content 
+    {
+        padding: .5rem 1.5rem 1.5rem;
+    }
+    .accessory__img 
+    {
+        width: 120px;
+        margin-block-end: var(--mb-1);
+    }
+    .accessory__button
+    {
+        padding: .75rem;
+    }
+    .send 
+    {
+        background: none;
+    }
+    .send__container 
+    {
+        background-color: var(--first-color-send);
+        padding: 2rem;
+        border-radius: 1.5rem;
+    }
+}
+
+
+@media screen and (min-width: 968px)
+{
+    .bd-container 
+    {
+        margin-inline: auto;
+    }
+    .home__img,
+    .share__img,
+    .send__img 
+    {
+        width: 469px;
+    }
+    .home__container,
+    .share__container,
+    .send__container
+    {
+        column-gap: 5rem;
+    }
+}
+/* ------ JAVASCRIPT CLASS --------------*/
 .show-menu 
 {
     top: calc(var(--header-height) + 1rem);
@@ -458,29 +608,27 @@ h3
     left: 45%;
     width: 5px;
     height: 5px;
-    border-radius: 50%;
     background-color: var(--title-color);
+    border-radius: 50%;
 }
-.scroll-header 
+.scroll-header
 {
     box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
 }
-
-/* scroll top*/
+/* ======== scroll top ===========*/
 .scrolltop 
 {
     position: fixed;
     right: 1rem;
-    bottom: -20%;
-    visibility: hidden;
+    bottom: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: .3rem;
-    background-color: rgba(218, 37, 54, .5);
+    background-color: rgba(218, 37, 53, .5);
     border-radius: .4rem;
     z-index: var(--z-tooltip);
-    transition: .4s;
+    visibility: hidden;
 }
 .scrolltop:hover 
 {
@@ -494,142 +642,49 @@ h3
 .show-scroll 
 {
     visibility: visible;
-    bottom: 1rem;
+    bottom: 1.5rem;
 }
 
+/* ================ SCROLL REVEAL ================= */
 
-/* ================== MEDIA QUERIES ==============*/
-@media screen and (max-width: 359px)
+.home__img,
+.home__data,
+.share__img,
+.share__data,
+.decoration__data,
+.accessory__content,
+.footer__content
 {
-    .home__img,
-    .share__img,
-    .send__img
-    {
-        width: 100%;
-    }
+    overflow: hidden;
 }
-@media screen and (min-width: 576px)
+.top_reveal,
+.left_reveal,
+.right_reveal 
 {
-    .home__container,
-    .share__container,
-    .send__container
-    {
-        grid-template-columns: repeat(2, 1fr);
-        align-items: center;
-    }
-    .home__container 
-    {
-        padding: calc(var(--padding-2) * 5) 0 0 0;
-    }
-    .home__img 
-    {
-        order:1;
-    }
-    .section-title-center,
-    .share__data,
-    .send__description
-    {
-        text-align: initial;
-    }
-    .home__img,
-    .share__img,
-    .send__img 
-    {
-        width: 100%;
-    }
-    .share__img 
-    {
-        order: -1;
-    }
+    transition: 900ms ease;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: null;
 }
-
-@media screen and (min-width: 768px)
+.top_reveal
 {
-    body 
-    {
-        margin: 0;
-    }
-    .section 
-    {
-        padding-block-start: 7rem;
-    }
-    .nav
-    {
-        height: calc(var(--header-height) + 1.5rem);
-    }
-    .nav__list 
-    {
-        display: flex;
-        align-items: center;
-    }
-    .nav__item 
-    {
-        margin-inline-start: var(--mb-5);
-        margin-block-end: 0;
-    }
-    .nav__toggle
-    {
-        display: none;
-    }
-    .home__container
-    {
-        padding: 7rem 2rem 0;
-    }
-    .share__container
-    {
-        padding: 0 2rem;
-    }
-    .accessory__container
-    {
-        grid-template-columns: repeat(3, 224px);
-        justify-content: center;
-    }
-    .accessory__content
-    {
-        padding: .5rem 1.5rem 1.5rem;
-    }
-    .accesory__img
-    {
-        width: 120px;
-        margin-block-end: var(--mb-1);
-    }
-    .accessory__title,
-    .accessory__category
-    {
-        text-align: initial;
-    }
-    .accessory__button 
-    {
-        padding: .75rem;
-    }
-    .send 
-    {
-        background: none;
-    }
-    .send__container
-    {
-        background-color: var(--first-color);
-        padding: 2rem;
-        border-radius: 1.5rem;
-    }
-
+    transform: translateY(-60%);
 }
-@media screen and (min-width: 968px) {
-    .bd-container
-    {
-        margin-inline: auto;
-    }
-    .home__img,
-    .share__img,
-    .send__img 
-    {
-        width: 469px;
-    }
-    .home__container,
-    .share__container,
-    .send__container 
-    {
-        column-gap: 5rem;
-    }
-    
+.left_reveal 
+{
+    transition: 740ms linear;
+    transform: translateX(-30%);
+}
+.right_reveal 
+{
+    transform: translateX(40%);
+}
+.top_reveal.active,
+.left_reveal.active,
+.right_reveal.active 
+{
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
 }
